Add PHPDoc comments and improve type hints across multiple classes

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     }
   ],
   "require": {
-    "php": "^8.2"
+    "php": "^8.2",
+    "ext-mbstring": "*"
   },
   "require-dev": {
     "mulertech/docker-tests": "^1",
