--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,11 @@
     "ext-mbstring": "*"
   },
   "require-dev": {
+    "friendsofphp/php-cs-fixer": "^3",
     "mulertech/docker-tests": "^1",
-    "phpunit/phpunit": "^11"
+    "phpstan/phpstan": "^2",
+    "phpunit/phpunit": "^11",
+    "roave/security-advisories": "dev-latest"
   },
   "autoload": {
     "psr-4": {
